fixing alignment bugs. Now have a horizontal scroll bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,8 @@ h4 {
 }
 
 .projects {
-  margin-top: 5em;
+  margin: 0 auto;
+  width: 90%;
   
 }
 
@@ -166,6 +167,7 @@ h3 {
 
 .contact {
   margin-top: 5em;
+  clear: both;
 }
 
 .contact li {
